--- a/Bead_project/Assembly-CSharp.csproj
+++ b/Bead_project/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\scripts\PlayerController.cs" />
+     <Compile Include="Assets\scripts\CameraController.cs" />
  <Reference Include="UnityEngine">
  <HintPath>D:/programok/unity/2020.2.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
