--- a/Bead_project/Assembly-CSharp.csproj
+++ b/Bead_project/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\scripts\Checkpoint.cs" />
      <Compile Include="Assets\scripts\GameManager.cs" />
      <Compile Include="Assets\scripts\PlayerController.cs" />
      <Compile Include="Assets\scripts\HeathManager.cs" />
@@ -59,7 +60,7 @@
      <Compile Include="Assets\scripts\HurtPlayer.cs" />
      <Compile Include="Assets\scripts\GoldPickup.cs" />
      <Compile Include="Assets\scripts\DestroyOverTime.cs" />
-     <Compile Include="Assets\scripts\Checkpoint.cs" />
+     <Compile Include="Assets\scripts\Menu.cs" />
      <None Include="Assets\Models\Free Low Poly Gold\readme.txt" />
  <Reference Include="UnityEngine">
  <HintPath>D:/programok/unity/2020.2.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
